swagger for user controller
